flex wrap fix for project dependencies

--- a/styles/index.css
+++ b/styles/index.css
@@ -143,7 +143,7 @@ body{
 
 .project-deps, .project-highlights{
     font-style:italic;
-    width:max-content;
+    width:100%;
     word-wrap:break-word;
     overflow-wrap:break-word;
     display:flex;
